--- a/manifest.json
+++ b/manifest.json
@@ -1,1 +1,45 @@
-
+{
+  "name": "Nattaqu",
+  "short_name": "Nattaqu",
+  "start_url": "nattaqu.blogspot.com",
+  "display": "standalone",
+   "background_color": "#ffffff",
+  "theme_color": "#ffffff",
+  "description": "Media ilmu digital",
+  "icons": [{
+    "src": "Url Icon favicon size 36x36",
+    "sizes": "36x36",
+    "type": "image/png",
+    "density": "0.75"
+  }, {
+    "src": "Url Icon favicon size 48x48",
+    "sizes": "48x48",
+    "type": "image/png",
+    "density": "1.0"
+  }, {
+    "src": "Url Icon favicon size 72x72",
+    "sizes": "72x72",
+    "type": "image/png",
+    "density": "1.5"
+  }, {
+    "src": "Url Icon favicon size 96x96",
+    "sizes": "96x96",
+    "type": "image/png",
+    "density": "2.0"
+  }, {
+    "src": "Url Icon favicon size 144x144",
+    "sizes": "144x144",
+    "type": "image/png",
+    "density": "3.0"
+  }, {
+    "src": "Url Icon favicon size 192x192",
+    "sizes": "192x192",
+    "type": "image/png",
+    "density": "4.0"
+  }, {
+    "src": "Url Icon favicon size 512x512",
+    "sizes": "512x512",
+    "type": "image/png",
+    "density": "5.0"
+  }]
+}
